[FEAT] Add AppHeader.vue

--- a/src/styles/generals.scss
+++ b/src/styles/generals.scss
@@ -7,3 +7,8 @@
     box-sizing: border-box;
     font-family: 'Roboto', Helvetica, sans-serif;
 }
+
+// DEBUG
+// * {
+//     border: 1px dashed red;
+// }
